[NNO-10228] parent datasource from new context is added to initParentDatasourceIdsMap